--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.4.0",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.1.0",
+    "lucide-react": "^0.358.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
