--- a/package.json
+++ b/package.json
@@ -48,8 +48,11 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.4.0",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.0",
     "input-otp": "^1.1.0",
+    "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.358.0",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
