--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.358.0",
+    "million": "^3.0.6",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
